добавил related name to product model

--- a/compass/templates/base.html
+++ b/compass/templates/base.html
@@ -25,7 +25,7 @@
     <main> 
       <div class="container py-5">
         {% block content %}
-          Контент не подвезли :(
+          Контент не подвезли :
         {% endblock %}
       </div>
     </main>        
