--- a/compass/templates/products/model_line_detail.html
+++ b/compass/templates/products/model_line_detail.html
@@ -44,7 +44,9 @@
       </div> 
 
     </article>
-    </div> 
       
+    {% include 'includes/product_list.html' %}
+    
+  </div> 
       
 {% endblock %}
