--- a/compass/templates/includes/paginator.html
+++ b/compass/templates/includes/paginator.html
@@ -17,7 +17,7 @@
           <li class="page-item active">
             <span class="page-link">{{ i }}</span>
           </li>
-        {% else %}
+        {% elif i >= page_obj.number|add:-5 and i <= page_obj.number|add:5  %}
           <li class="page-item">
             <a class="page-link" href="?page={{ i }}">{{ i }}</a>
           </li>
