add search for name in template

--- a/compass/templates/products/product_detail.html
+++ b/compass/templates/products/product_detail.html
@@ -61,6 +61,11 @@
         href="{% url 'products:product_edit' product.pk %}" role="button"
         >Изменить
       </a>
+      <a
+      class="btn btn-lg btn-primary"
+      href="{% url 'products:product_in_partners_edit' product.pk %}" role="button"
+      >У партнеров
+    </a>
     </div> 
       
       
