--- a/compass/templates/products/index.html
+++ b/compass/templates/products/index.html
@@ -2,9 +2,19 @@
 {% load static %}
 {% block content %}   
     <h1>{{ description }}</h1> 
+
     <button type="submit" class="btn btn-primary">
+
       <a class="nav-link active" href="{% url 'products:product_import' %}">обновить товары</a></td>              
     </button> 
+    <form action="." method="get">
+      <br>
+      {% if query is not None %}
+      <input class="form-control" name="q" type="text" placeholder="Поиск..." value={{ query }}>
+      {% else %}
+      <input class="form-control" name="q" type="text" placeholder="Поиск..." >
+      {% endif %}
+    </form>
     {%include 'includes/product_list.html'%}
 {% endblock %} 
 
