--- a/compass/templates/products/products_in_partners_edit.html
+++ b/compass/templates/products/products_in_partners_edit.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block content %}
 
-{{product.name }}
+<h1>{{product.name }}</h1>
 
 <div class="row justify-content-center">
     <div class="col-md-8 p-5">
