--- a/compass/templates/products/index.html
+++ b/compass/templates/products/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}   
     <h1>{{ description }}</h1> 
-    
+    <div class="row">
     <div class="fs-5 col-md-6" >
       <h3>Проблемы в характеристиках товаров</h1> 
       
@@ -54,9 +54,11 @@
       </tr>
       </tbody>
     </table>
-    <a href="{% url 'products:chart'  %}">смотреть прогресс </a>
   </div>
-
+  <div class="fs-5 col-md-6" >
+  {{ chart | safe}}
+  </div>
+</div>
     <button type="submit" class="btn btn-primary">
 
       <a class="nav-link active" href="{% url 'products:product_import' %}">обновить товары</a></td>              
